rns-lang/tests/snapshots/err-lexer-chars-unexpected_symbol.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.code %

----- STDOUT -----

----- STDERR -----
Error: unexpected character
   ╭─[ test_data/integration/err/lexer/chars/unexpected_symbol.ja:1:7 ]
   │
 1 │ .code %
   │       ┬  
   │       ╰── found '%' here
───╯
