rns-lang/tests/snapshots/err-lexer-directives-dot_annotation.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class .annotation
    .name "Lcom/example/Annotation;"
    .value "value" = "test"
----- STDOUT -----

----- STDERR -----
Error: unknown directive
   ╭─[ test_data/integration/err/lexer/directives/dot_annotation.ja:2:5 ]
   │
 2 │     .name "Lcom/example/Annotation;"
   │     ──┬──  
   │       ╰──── unknown directive
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code, .annotation
───╯
