rns-lang/tests/snapshots/err-lexer-directives-dot_dot_annotation.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
..annotation 
----- STDOUT -----

----- STDERR -----
Error: unknown directive
   ╭─[ test_data/integration/err/lexer/directives/dot_dot_annotation.ja:1:1 ]
   │
 1 │ ..annotation
   │ ──────┬─────  
   │       ╰─────── did you mean '.annotation' ?
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code, .annotation
───╯
