rns-lang/tests/snapshots/err-lexer-directives-dot_final.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.final
----- STDOUT -----

----- STDERR -----
Error: unknown directive
   ╭─[ test_data/integration/err/lexer/directives/dot_final.ja:1:1 ]
   │
 1 │ .final
   │ ───┬──  
   │    ╰──── unknown directive
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code, .annotation
───╯
