rns-lang/tests/snapshots/err-lexer-directives-dot_integer.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.method
.42 42 42 42 42


42 42 42 42 42
----- STDOUT -----

----- STDERR -----
Error: unknown directive
   ╭─[ test_data/integration/err/lexer/directives/dot_integer.ja:2:1 ]
   │
 2 │ .42 42 42 42 42
   │ ─┬─  
   │  ╰─── unknown directive
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code, .annotation
───╯
